back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: back
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: back
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/mongo_net: "true"
        io.kompose.service: back
    spec:
      containers:
      - image: back
        imagePullPolicy: ""
        name: back
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - mountPath: /src
          name: back-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: back-claim0
        persistentVolumeClaim:
          claimName: back-claim0
status: {}
