my-mongoclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: my-mongoclient
  name: my-mongoclient
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: my-mongoclient
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/mongo_net: "true"
        io.kompose.service: my-mongoclient
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_DATABASE
          value: sport_care
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: admin
        - name: MONGO_INITDB_ROOT_USERNAME
          value: admin
        - name: MONGO_SERVER
          value: my-mongodb
        image: fabianlee/my-mongoclient:3.9
        imagePullPolicy: ""
        name: my-mongoclient
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
